--- a/style.css
+++ b/style.css
@@ -21,18 +21,16 @@
 
 .carre-bleue {
 
-    height: 150px;
-    width: 350px;
+
     background-color: #191970;
     display: inline-block;
     padding: 5px;
     color: white;
-    
+
 }
 
 .carre-rose {
-    height: 150px;
-    width: 350px;
+
     display: inline-block;
     padding: 5px;
     background-color: #ff5f61;
@@ -41,8 +39,7 @@
 }
 
 .carre-violet {
-    height: 150px;
-    width: 350px;
+
     display: inline-block;
     padding: 5px;
     background-color: #5f4b8b;
@@ -51,20 +48,29 @@
 }
 
 .carre-very {
-    height: 150px;
-    width: 350px;
+
     padding: 5px;
     background-color: #6667AB;
     color: white;
-    margin-left: 5rem;
+    margin-left: 15rem;
 }
 
-.caree-bi {
-    height: 150px;
-    width: 350px;
+.carre-bi {
+
     padding: 5px;
     display: inline-block;
     color: white;
     margin-left: 5rem;
-    background: linear-gradient(90deg, #f5df4d 50%, #939597 50%);
+
+    background: rgb(245, 223, 77);
+    background: linear-gradient(90deg, rgba(245, 223, 77, 1) 50%, rgba(147, 149, 151, 1) 50%);
 }
+    .flex-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .taille {
+        height: 200px;
+        width: 30%;
+    }
